tests/baselines/reference/nodeModulesImportMeta(module=node20).errors.txt
subfolder/index.ts(2,11): error TS1470: The 'import.meta' meta-property is not allowed in files which will build into CommonJS output.


==== subfolder/index.ts (1 errors) ====
    // cjs format file
    const x = import.meta.url;
              ~~~~~~~~~~~
!!! error TS1470: The 'import.meta' meta-property is not allowed in files which will build into CommonJS output.
    export {x};
==== index.ts (0 errors) ====
    // esm format file
    const x = import.meta.url;
    export {x};
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }